<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/black"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTime"
                android:textSize="70sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAmPm"
                android:gravity="bottom"
                android:textSize="25sp"
                android:textStyle="normal"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif-condensed-medium"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowMore"
                android:layout_gravity="bottom"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:src="@drawable/arrow_down"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"

                android:layout_gravity="end|center_vertical"  />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDelete"
                android:src="@drawable/delete_alarm"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_days"
            android:visibility="gone"
              >
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSun"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:text="@string/s"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-black"
                    />
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnMon"
                    android:text="@string/monday"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnTues"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textSize="25sp"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnWed"
                    android:text="@string/wednesday"
                    android:textSize="25sp"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnThurs"
                    android:text="@string/thursday"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    />
                <Button
                    android:layout_width="0dp"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFri"
                    android:text="@string/friday"
                    android:layout_weight="1"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSat"
                    android:text="@string/saturday"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-black"
                />





        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>